Project

General

Profile

Actions

Bug #10921

closed

mdb_nicenum() needs smatch fix

Added by John Levon over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
2019-05-06
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

We can fix this and clean up MDB smatch settings at the same time.

Actions #1

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 0eb3364f7d9157494d68a9f390c120ca86e03be1

commit  0eb3364f7d9157494d68a9f390c120ca86e03be1
Author: John Levon <john.levon@joyent.com>
Date:   2019-05-08T08:51:53.000Z

    10921 mdb_nicenum() needs smatch fix
    Reviewed by: Jason King <jason.brian.king@gmail.com>
    Reviewed by: Toomas Soome <tsoome@me.com>
    Approved by: Richard Lowe <richlowe@richlowe.net>

Actions

Also available in: Atom PDF